opam-version: "2.0"
name: "process_limits"
version: "1.5.5"
synopsis: "Setting time and memory limits for your program"
description: """
This is a small library of utilities used by Semgrep and
a few other projects developed at r2c to control the
time and memory used by Semgrep.
"""

maintainer: "Yoann Padioleau <pad@r2c.dev>"
authors: [ "Yoann Padioleau <pad@r2c.dev>" ]
license: "LGPL-2.1-only"
homepage: "https://semgrep.dev"
dev-repo: "git+https://github.com/returntocorp/semgrep"
bug-reports: "https://github.com/returntocorp/semgrep/issues"

depends: [
  "ocaml" {>= "4.12.0"}
  "dune" {>= "3.2.0" }
  "commons" {>= "1.5.5"}
]

build: ["dune" "build" "-p" name "-j" jobs]
