[tool.poetry]
name = "sgrep"
version = "0.1.0"
description = ""
authors = ["Yoann Padioleau <pad@r2c.dev>", "Isaac Evans <isaac@r2c.dev>", "Drew Dennison <drew@r2c.dev>"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
