opam-version: "2.0"
name: "semgrep"
version: "1.3.0"
synopsis: "Like grep but for code: fast and syntax-aware semantic code pattern for many languages"
description: """
Semgrep is like grep but for searching patterns at the AST level.

For more information see https://semsgrep.dev
"""

maintainer: "Yoann Padioleau <pad@r2c.dev>"
authors: [ "Yoann Padioleau <pad@r2c.dev>" ]
license: "LGPL-2.1"
homepage: "https://semgrep.dev"
dev-repo: "git+https://github.com/returntocorp/semgrep"
bug-reports: "https://github.com/returntocorp/semgrep/issues"

# These are build dependencies.
# Development-only dependencies are in 'dev/dev.opam'.

#coupling: for semgrep CI to be fast, we try to pre-install these packages as
# part of of the base docker image. When you add a new package or change a version
# here, please also update the list of packages there:
#
#   https://github.com/returntocorp/ocaml-layer/blob/master/common-config.sh
#
# or ask Martin to do so.
# You may also need to update the ocaml:alpine-xxx image used in ../Dockerfile.
#TODO: restore  "bisect_ppx" {>= "2.5.0"} once can use ppxlib 0.22.0
depends: [
  "ocaml" {>= "4.12.0"}
  "dune" {>= "2.7.0" }
  "stdcompat"
  "menhir" {= "20211128"} (* Newer versions cause massive build slowdowns *)
  "grain_dypgen"
  "base"
  "fpath"
  "alcotest"
  "ANSITerminal"
  "easy_logging" { = "0.8.1" }
  "easy_logging_yojson" { = "0.8.1" }
  "logs"
  "atdgen"
  "yojson"
  "yaml"
  "cmdliner"
  "ppxlib"
  "ppx_deriving"
  "ppx_hash"
  "ppx_inline_test"
  # Avoid bug https://github.com/janestreet/ppx_sexp_conv/issues/40
  # affecting CST type definitions generated by old versions of
  # ocaml-tree-sitter. New generated code no longer uses ppx_sexp_conv.
  # Handwritten code can easily work around this bug.
  "ppx_sexp_conv" { != "0.15" }
  "re"
  "pcre"
  "ocamlgraph"
  "parmap"
  "cohttp-lwt-unix" # this brings lots of dependencies. This is for osemgrep.
  "lsp" {= "1.7.0"}
  "visitors" {= "20210608"}
  "js_of_ocaml" {= "5.1.1"}
  "js_of_ocaml-compiler" {= "5.1.1"}
  "js_of_ocaml-ppx" {= "5.1.1"}
  "ctypes_stubs_js"
  "integers_stubs_js"
]

build: [make]
