# This is meant to be installed with 'opam install --deps-only ./path/to/dev'
#
opam-version: "2.0"
maintainer: "r2c"
authors: "r2c"
homepage: "n/a"
bug-reports: "n/a"
synopsis: "OCaml development dependencies"

depends: [
  "merlin"  # used by the various text editors with ocaml support
  #coupling: if you modify this, you probably need to update:
  # - https://github.com/returntocorp/ocaml-layer/blob/master/common-config.sh
  # - scripts/lint-ocaml
  # - .github/workflows/lint.yml and its pre-commit-ocaml job
  "ocamlformat" {= "0.26.0" }  # used by the pre-commit hook
  "ppx_deriving_cmdliner" # used by hello_script.ml
  "feather" # used by hello_script.ml
  "ocaml-lsp-server" {= "1.16.2"} # used by the VSCode extension
  "ocamlearlybird" {= "1.2.1"} # used by the VSCode extension
]
