# This is meant to be installed with 'opam install --deps-only ./path/to/dev'
#
opam-version: "2.0"
maintainer: "r2c"
authors: "r2c"
homepage: "n/a"
bug-reports: "n/a"
synopsis: "OCaml development dependencies that are not needed in CI"

depends: [
  "merlin"  # used by the various text editors with ocaml support
  #coupling: if you modify this, you probably need to update:
  # - https://github.com/returntocorp/ocaml-layer/blob/master/common-config.sh
  # - scripts/lint-ocaml
  # - .github/workflows/lint.yml and its pre-commit-ocaml job
  "feather" # used by hello_script.ml
  "ocaml-lsp-server" {= "1.15.1-4.14"} # used by the VSCode extension
  "earlybird" {= "1.2.1"} # used by the VSCode extension
  "py" "qcheck" "qcheck-alcotest" # used by libs/python-str-repr/test
]
