# This is meant to be installed with 'opam install --deps-only ./path/to/dev'
#
opam-version: "2.0"
maintainer: "r2c"
authors: "r2c"
homepage: "n/a"
bug-reports: "n/a"
synopsis: "OCaml dependencies needed in CI"

depends: [
  # OCamlFormat doesn't support OCaml 5 https://github.com/ocaml-ppx/ocamlformat/issues/2524
  (("ocamlformat" {= "0.26.1" } & "ocaml" {< "5.0"}) | "ocaml" {>= "5.0"}) # used by the pre-commit hook
]
