opam-version: "2.0"
name: "pfff"
version: "0.40.4"
synopsis: "Tools and APIs for program analysis, code visualization, refactoring"
description: """
pfff is a set of tools and APIs to perform some static analysis,
dynamic analysis, code visualizations, code navigations, or
style-preserving source-to-source transformations such as refactorings
on source code. For now the effort is focused on Javascript and Python
but there is also good support for C, C++, Java, Go, Ruby, PHP, HTML, Css, and
preliminary support for Erlang, C#, Lisp, Scheme, Haskell, Skip, SQL, and
even TeX. There is also very good support for OCaml and noweb
(literate programming) so that pfff can be used on the code of pfff
itself.

For more information see https://github.com/facebook/pfff/wiki/Main"""

maintainer: "yoann.padioleau@gmail.com"
authors: [ "Yoann Padioleau <yoann.padioleau@gmail.com>" ]
homepage: "https://github.com/facebook/pfff/wiki/Main"
bug-reports: "https://github.com/returntocorp/pfff/issues"
dev-repo: "git+https://github.com/returntocorp/pfff.git"

patches: [
]
build: [
  ["./configure" "--novisual" "--nocmt" "--nobytecode"]
  [make "depend"]
  [make]
  [make "opt"]
]
install: [
  [make "reinstall-libs"]
]
depends: [
  "ocaml" {>= "4.07.0"}
  "ocamlfind" {build}
  "ocamlgraph"
  "json-wheel"
  "conf-perl"
  "menhir"
  "grain_dypgen"
  "ppx_deriving"
  "uutf"
  "uucp"
]
