; Due to bug showing wrong type aliases, we avoid the '-short-paths' option.
; See https://github.com/ocaml/ocaml/issues/10432
;
; Default flags set by dune and coming with ':standard' are:
;  -w @1..3@5..28@30..39@43@46..47@49..57@61..62-40 -strict-sequence -strict-formats -short-paths -keep-locs
;
(env
  (dev
    (flags (
      -w @1..3@5..28@30..39@43@46..47@49..57@61..62-40 -strict-sequence -strict-formats -keep-locs
      -w -52-6
  )))
  (release
    (flags (:standard -O3))))
