; The default combination of flags is ':standard', which is made of the
; following options:
;  -w @1..3@5..28@30..39@43@46..47@49..57@61..62-40 -strict-sequence -strict-formats -short-paths -keep-locs
;
; We considered disabling the '-short-paths' option due to bad aliases
; being shown in type hints and error messages, but the alternative also
; picks arbitrary aliases. Instead, we use '-short-paths' and prefix
; our type aliases with 'a_' as a workaround.
; See issue https://github.com/ocaml/ocaml/issues/10432 for details.
;
(env
  (dev
    (flags (:standard  -w -52-6)))
  (release
    (flags (:standard -O3))))

;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
; Don't build executables for the submodules that we only use as libraries.
; - Saves a tiny bit of build time (about 3-4%).
; - Keeps the bin/ folder clean.
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

;pad: I actually like to use the pfff/cli/Main.exe to dump specialized ASTs
;(subdir
;   src/pfff
;   (data_only_dirs cli)
;)

(subdir
   src/ocaml-tree-sitter-core/src/gen
   (data_only_dirs bin)
)

; Unfortunately, 'subdir' doesn't expand wildcards.
;(subdir
;   src/tree-sitter-lang/semgrep-*
;   (data_only_dirs bin)
;)

;(subdir
;   src/tree-sitter-lang/semgrep-bash
;   (data_only_dirs bin)
;)

(subdir
   src/tree-sitter-lang/semgrep-c
   (data_only_dirs bin)
)

(subdir
   src/tree-sitter-lang/semgrep-cpp
   (data_only_dirs bin)
)

(subdir
   src/tree-sitter-lang/semgrep-c-sharp
   (data_only_dirs bin)
)

(subdir
   src/tree-sitter-lang/semgrep-dockerfile
   (data_only_dirs bin)
)

(subdir
   src/tree-sitter-lang/semgrep-go
   (data_only_dirs bin)
)

(subdir
   src/tree-sitter-lang/semgrep-hack
   (data_only_dirs bin)
)

(subdir
   src/tree-sitter-lang/semgrep-hcl
   (data_only_dirs bin)
)

(subdir
   src/tree-sitter-lang/semgrep-html
   (data_only_dirs bin)
)

(subdir
   src/tree-sitter-lang/semgrep-java
   (data_only_dirs bin)
)

(subdir
   src/tree-sitter-lang/semgrep-javascript
   (data_only_dirs bin)
)

(subdir
   src/tree-sitter-lang/semgrep-kotlin
   (data_only_dirs bin)
)

(subdir
   src/tree-sitter-lang/semgrep-lua
   (data_only_dirs bin)
)

(subdir
   src/tree-sitter-lang/semgrep-ocaml
   (data_only_dirs bin)
)

(subdir
   src/tree-sitter-lang/semgrep-php
   (data_only_dirs bin)
)

(subdir
   src/tree-sitter-lang/semgrep-r
   (data_only_dirs bin)
)

(subdir
   src/tree-sitter-lang/semgrep-ruby
   (data_only_dirs bin)
)

(subdir
   src/tree-sitter-lang/semgrep-rust
   (data_only_dirs bin)
)

(subdir
   src/tree-sitter-lang/semgrep-sqlite
   (data_only_dirs bin)
)

(subdir
   src/tree-sitter-lang/semgrep-tsx
   (data_only_dirs bin)
)

(subdir
   src/tree-sitter-lang/semgrep-typescript
   (data_only_dirs bin)
)

(subdir
   src/tree-sitter-lang/semgrep-vue
   (data_only_dirs bin)
)
