opam-version: "2.0"
name: "semgrep"
version: "0.5.0"
synopsis: "Like grep but for code: fast and syntax-aware semantic code pattern for many languages"
description: """
grep is like grep but for searching patterns at the AST level.

For more information see https://semsgrep.dev"""

maintainer: "Yoann Padioleau <pad@r2c.dev>"
authors: [ "Yoann Padioleau <pad@r2c.dev>" ]
license: "LGPL-2.1"
homepage: "https://semgrep.dev"
dev-repo: "git+https://github.com/returntocorp/semgrep"
bug-reports: "https://github.com/returntocorp/semgrep/issues"

# These are build dependencies.
# Development-only dependencies are in 'dev/dev.opam'.
# A big dependency is pfff, but it's now a submodule so it's not listed here
depends: [
  "dune" {>= "2.7.0" }
  "bisect_ppx" {>= "2.5.0"}
  "bloomf"
  "yojson"
  "yaml"
  "ppx_deriving"
  "ppx_hash"
  "uucp"
  "uutf"
  "re"
  "pcre"
  "parmap"
  "lsp" {= "1.1.0"}
  "easy_logging" { dev & >= "0.8.0" }
  "easy_logging_yojson" { dev & >= "0.8.0" }
]
pin-depends: [
  ["easy_logging.git" "git+https://github.com/aryx/easy_logging.git"]
  ["easy_logging_yojson.git" "git+https://github.com/aryx/easy_logging.git"]
]

build: [make]
