opam-version: "2.0"
name: "semgrep"
version: "0.5.0"
synopsis: "Like grep but for code: fast and syntax-aware semantic code pattern for many languages"
description: """
grep is like grep but for searching patterns at the AST level.

For more information see https://semsgrep.dev"""

maintainer: "Yoann Padioleau <pad@r2c.dev>"
authors: [ "Yoann Padioleau <pad@r2c.dev>" ]
license: "LGPL-2.1"
homepage: "https://semgrep.dev"
dev-repo: "git+https://github.com/returntocorp/semgrep"
bug-reports: "https://github.com/returntocorp/semgrep/issues"

# These are build dependencies.
# Development-only dependencies are in 'dev/dev.opam'.
# A big dependency is pfff, but it's now a submodule so it's not listed here
#TODO: restore  "bisect_ppx" {>= "2.5.0"} once can use ppxlib 0.22.0

depends: [
  "dune" {>= "2.7.0" }
  "bloomf"
  "yojson"
  "yaml"
  "ppx_deriving"
  "ppx_hash"
  "uucp"
  "uutf"
  "re"
  "pcre"
  "parmap"
  "ppxlib" {= "0.15.0" }
  "lsp" {= "1.1.0"}
]

build: [make]
