opam-version: "2.0"
name: "semgrep"
version: "0.5.0"
synopsis: "Like grep but for code: fast and syntax-aware semantic code pattern for many languages"
description: """
grep is like grep but for searching patterns at the AST level.

For more information see https://semsgrep.dev"""

maintainer: "Yoann Padioleau <pad@r2c.dev>"
authors: [ "Yoann Padioleau <pad@r2c.dev>" ]
license: "LGPL-2.1"
homepage: "https://semgrep.dev"
dev-repo: "git+https://github.com/returntocorp/semgrep"
bug-reports: "https://github.com/returntocorp/semgrep/issues"

# These are build dependencies.
# Development-only dependencies are in 'dev/dev.opam'.
# A big dependency is pfff, but it's now a submodule so it's not listed here
#TODO: restore  "bisect_ppx" {>= "2.5.0"} once can use ppxlib 0.22.0

# For semgrep CI to be fast, we try to pre-install these packages as part of
# of the base docker image. When you add a new package or change a version
# here, please also update the list of packages there:
#
#   https://github.com/returntocorp/ocaml-layer/blob/master/common-config.sh
#
# or ask Martin to do so.
# You may also need to update the ocaml:alpine-xxx image used in ../Dockerfile.
depends: [
  "dune" {>= "2.7.0" }
  "bloomf"
  "atdgen"
  "yojson"
  "yaml"
  "ppx_deriving"
  "ppx_hash"
  "uucp"
  "uutf"
  "re"
  "pcre"
  "parmap"
  "ppxlib" {= "0.15.0" }
  "lsp" {= "1.3.0"}
  "comby-kernel" {= "1.4.1"}
]

build: [make]
