[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
    "tests/unit",
    "tests/e2e",
    "tests/consistency",
]
markers = [
    "quick: test takes less than 100 ms",
    "kinda_slow: test takes up to 2s",
    "slow: test takes more than 2s",
]
