[tool.poetry]
name = "semgrep"
version = "0.4.10b1"
description = "like grep but for code: fast and syntax-aware semantic code pattern for many languages"
authors = ["hello@r2c.dev"]
license = "LGPL-2.0"
packages = [
  { include = "semgrep" },
]
[tool.poetry.dependencies]
python = "^3.5"
colorama = "0.4.3"
pyyaml = "5.3"
requests = "2.22.0"

[tool.poetry.dev-dependencies]
pytest = "5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
