(executable
 (name test)
 (libraries
    commons
    process_limits
    lib_parsing

    commons.tests
    semgrep.analyzing.tests ; Unit_dataflow
    semgrep.core
    semgrep.printing.tests
    semgrep.fixing.tests
    semgrep.metachecking
    semgrep.parsing
    semgrep.parsing_languages
    semgrep.matching
    semgrep.synthesizing
    semgrep.reporting
    semgrep.engine
    parser_python.menhir parser_python.ast_generic
    semgrep.data

    osemgrep_targeting
  )
 (preprocess
   (pps
      ppx_deriving.show
   ))
)

(rule
 (alias runtest)
 (action (run ./test.exe -e)))
