(env
 (js_of_ocaml (flags -no-inline -debug-info)))

(executables
 (names Main)
 (libraries
  js_of_ocaml
  js_of_ocaml-lwt
  logs.browser
  semgrep.language_server
  semgrep.semgrep_js_shared
  lwt_platform.js

   networking.http_helpers
   cohttp-lwt-jsoo
  )
 (modes js)
 (js_of_ocaml
  (javascript_files
   XMLHttpRequest.js
 ))
 (preprocess
  (pps lwt_ppx js_of_ocaml-ppx)))
