(env
  (dev
   (js_of_ocaml
    (flags
     (:standard --debug-info --no-inline --disable shortvar --disable staticeval --disable share))
    (build_runtime_flags
     (:standard --debug-info --no-inline --disable shortvar --disable staticeval --disable share)))))

(executables
 (names Main)
 (libraries
  js_of_ocaml
  js_of_ocaml-lwt
  logs.browser
  semgrep.language_server
  semgrep.semgrep_js_shared
  semgrep.semgrep_node_js_shared
  semgrep.parsing_languages
  lwt_platform.js

   networking.http_helpers
  )
 (modes js)
 (js_of_ocaml
  (javascript_files
   ;; Custom XMLHttpRequest implementation that doesn't preset the User-Agent header
   semgrep.js
 ))
 (preprocess
  (pps lwt_ppx js_of_ocaml-ppx)))

;; TODO: Clean this up and make it less gross
(rule
 (targets semgrep.js)
 (action
  (with-stdout-to
   %{targets}
   (run ../languages/shared/generate-semgrep-js.sh bash c cairo cpp c_sharp dart dockerfile elixir go hack html java json jsonnet julia kotlin lisp lua ocaml php promql proto python ql r ruby rust scala solidity swift terraform typescript vue tsx hcl clojure))))
