(library
 (public_name semgrep.semgrep_js_shared)
 (name semgrep_js_shared)
 (wrapped false)
 (libraries
   js_of_ocaml
   semgrep.parsing
   libyaml_stubs_js
   integers_stubs_js
   libpcre_stubs_js
   yaml_ctypes_overrides
   networking.http_helpers
   cohttp-lwt-jsoo
 )
 (js_of_ocaml
  (javascript_files
    ocaml-tree-sitter.js
   core.js ; misc libraries
   octs.js ; ocaml-tree-sitter plumbing
 ))
 (preprocess
  (pps js_of_ocaml-ppx)))
